<resources>
    <string name="app_name">AndroidBatch2</string>
    <string name="signup">Create An Account</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email Id</string>
    <string name="contact_no">Contact No.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup_title">Signup</string>
</resources>