<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        style="@style/text_bi_20"
        android:id="@+id/main_create_account"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/signup" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_create_account">

        <ImageView
            android:id="@+id/main_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_170sdp"
            android:src="@drawable/app_bg" />

        <TextView
            style="@style/text_bi_20"
            android:id="@+id/main_title"
            android:layout_below="@id/main_image"
            android:layout_centerHorizontal="true"
            android:text="@string/login" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/main_title"
            android:layout_marginHorizontal="@dimen/_30sdp">

            <EditText
                android:inputType="textEmailAddress"
                style="@style/edit_15"
                android:id="@+id/main_username"
                android:layout_marginTop="@dimen/_30sdp"
                android:drawableLeft="@drawable/ic_profile"
                android:hint="@string/username" />

            <EditText
                android:inputType="textPassword"
                style="@style/edit_15"
                android:id="@+id/main_password"
                android:layout_below="@id/main_username"
                android:layout_marginTop="@dimen/_20sdp"
                android:drawableLeft="@drawable/ic_lock"
                android:hint="@string/password" />

            <Button
                android:id="@+id/main_login"
                style="@style/button_18"
                android:layout_below="@id/main_password"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/login" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>